Fix main nav search form alignment.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,6 +15,12 @@
   }
 }
 
+@media (max-width: $screen-sm-max) {
+  #nav-search {
+    margin: 0 -15px;
+  }
+}
+
 #notifications {
   padding-top: $navbar-height + 20px;
 }
